# github-pr-to-text

./: README.md  git_github_pr_to_text.py  pyproject.toml  setup.py
src/git_github_pr_to_text/: main.py
